// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test basic Components Tag Input component type duplicate values CDNG-8531 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="allowedValues-0"
        >
          <label
            class="bp3-label"
            for="allowedValues"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_allowedValues"
            >
              checking my tag input
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper tagInput bp3-fill"
            >
              <div
                class="bp3-popover-target bp3-popover-open"
              >
                <div
                  class=""
                >
                  <div
                    class="bp3-input bp3-tag-input bp3-active bp3-fill bp3-multi-select"
                  >
                    <div
                      class="bp3-tag-input-values"
                    >
                      <span
                        class="bp3-tag bp3-intent-primary bp3-minimal tag"
                        data-tag-index="0"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          tag1
                        </span>
                        <button
                          class="bp3-tag-remove"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                      <span
                        class="bp3-tag bp3-intent-primary bp3-minimal tag"
                        data-tag-index="1"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          tag2
                        </span>
                        <button
                          class="bp3-tag-remove"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                      <input
                        class="bp3-input-ghost"
                        value=""
                      />
                    </div>
                    <button
                      class="bp3-button bp3-minimal"
                      type="button"
                    >
                      <span
                        class="bp3-icon bp3-icon-cross"
                        icon="cross"
                      >
                        <svg
                          data-icon="cross"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            cross
                          </desc>
                          <path
                            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components render formik form custom render: custom render formik 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
        for="field1"
      >
        <span
          class="acenter"
          data-tooltip-id="sampleForm_field1"
        >
          field1label
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            autocomplete="off"
            class="bp3-input"
            name="field1"
            type="text"
            value="val1"
          />
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group"
    >
      <div
        class="bp3-form-content"
      >
        <label
          class="bp3-control bp3-checkbox StyledProps--font checkbox StyledProps--main StyledProps--inline"
        >
          <input
            name="field2"
            type="checkbox"
          />
          <span
            class="bp3-control-indicator"
          />
          <span
            class="acenter checkBoxDocTooltipLabel"
            data-tooltip-id="field2tipId"
          >
            field2label
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test basic Components should render Checkbox component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="color-0"
        >
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-control bp3-checkbox StyledProps--font checkbox StyledProps--main StyledProps--inline"
            >
              <input
                name="color"
                type="checkbox"
              />
              <span
                class="bp3-control-indicator"
              />
              <span
                class="acenter checkBoxDocTooltipLabel"
                data-tooltip-id="testform_color"
              >
                Color
              </span>
            </label>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render Custom Input component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="counter-0"
        >
          <label
            class="bp3-label"
            for="counter"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_counter"
            >
              Increment
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <button
              class="bp3-button button StyledProps--font StyledProps--main with-current-color"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Click Me
              </span>
            </button>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render FileInput component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="file-0"
        >
          <label
            class="bp3-label"
            for="file"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_file"
            >
              Attach File
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-file-input bp3-fill"
            >
              <input
                name="file"
                type="file"
              />
              <span
                bp3-button-text="Select"
                class="bp3-file-upload-input bp3-file-upload-input-custom-text"
              >
                Select file...
              </span>
            </label>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render FileInput component 2`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="tags-0"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_tags"
            >
              Add Tag
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper tagInput bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class=""
                >
                  <div
                    class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
                  >
                    <div
                      class="bp3-tag-input-values"
                    >
                      <span
                        class="bp3-tag bp3-minimal tag addTagButton"
                        data-tag-index="0"
                      >
                        <span
                          class="bp3-text-overflow-ellipsis bp3-fill"
                        >
                          + tag
                        </span>
                        <button
                          class="bp3-tag-remove"
                          type="button"
                        >
                          <span
                            class="bp3-icon bp3-icon-small-cross"
                            icon="small-cross"
                          >
                            <svg
                              data-icon="small-cross"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                small-cross
                              </desc>
                              <path
                                d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                      <input
                        class="bp3-input-ghost"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render MultiSelect component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="color-0"
        >
          <label
            class="bp3-label"
            for="color"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_color"
            >
              Color
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class=""
                >
                  <div
                    class="bp3-input bp3-tag-input bp3-multi-select"
                  >
                    <div
                      class="bp3-tag-input-values"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input-ghost"
                        name="color"
                        placeholder="- Select -"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render MultiTypeInput component with Select (with useValue and selectItems) 1`] = `
<div
  class="bp3-popover-wrapper select fixedValueInput main bp3-fill"
>
  <div
    class="bp3-popover-target"
  >
    <div
      class="bp3-input-group"
    >
      <input
        autocomplete="off"
        class="bp3-input"
        name="label-multitypeinput"
        placeholder="Search..."
        style="padding-right: 0px;"
        type="text"
        value="customvalue"
      />
      <span
        class="bp3-input-action"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--padding-top-small StyledProps--padding-right-xsmall StyledProps--padding-bottom-small"
          data-icon="main-delete"
        >
          <svg
            enable-background="new 0 0 14 14"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m10.5 4.2c0-.4-.3-.7-.7-.7-.2 0-.4.1-.5.2l-2.3 2.3-2.3-2.3c-.1-.1-.3-.2-.5-.2-.4 0-.7.3-.7.7 0 .2.1.4.2.5l2.3 2.3-2.3 2.3c-.1.1-.2.3-.2.5 0 .4.3.7.7.7.2 0 .4-.1.5-.2l2.3-2.3 2.3 2.3c.1.1.3.2.5.2.4 0 .7-.3.7-.7 0-.2-.1-.4-.2-.5l-2.3-2.3 2.3-2.3c.1-.1.2-.3.2-.5zm-3.5-4.2c-3.9 0-7 3.1-7 7s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 12.6c-3.1 0-5.6-2.5-5.6-5.6s2.5-5.6 5.6-5.6 5.6 2.5 5.6 5.6-2.5 5.6-5.6 5.6z"
              fill="#4d5969"
            />
          </svg>
        </span>
        <span
          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
          icon="chevron-down"
        >
          <svg
            data-icon="chevron-down"
            height="14"
            viewBox="0 0 16 16"
            width="14"
          >
            <desc>
              chevron-down
            </desc>
            <path
              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Test basic Components should render MultiTypeInput component with Select 1`] = `
<div
  class="bp3-popover-wrapper select fixedValueInput main bp3-fill"
>
  <div
    class="bp3-popover-target"
  >
    <div
      class="bp3-input-group"
    >
      <input
        autocomplete="off"
        class="bp3-input"
        name="label-multitypeinput"
        placeholder="Search..."
        style="padding-right: 0px;"
        type="text"
        value="customvalue"
      />
      <span
        class="bp3-input-action"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--padding-top-small StyledProps--padding-right-xsmall StyledProps--padding-bottom-small"
          data-icon="main-delete"
        >
          <svg
            enable-background="new 0 0 14 14"
            height="14"
            viewBox="0 0 14 14"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m10.5 4.2c0-.4-.3-.7-.7-.7-.2 0-.4.1-.5.2l-2.3 2.3-2.3-2.3c-.1-.1-.3-.2-.5-.2-.4 0-.7.3-.7.7 0 .2.1.4.2.5l2.3 2.3-2.3 2.3c-.1.1-.2.3-.2.5 0 .4.3.7.7.7.2 0 .4-.1.5-.2l2.3-2.3 2.3 2.3c.1.1.3.2.5.2.4 0 .7-.3.7-.7 0-.2-.1-.4-.2-.5l-2.3-2.3 2.3-2.3c.1-.1.2-.3.2-.5zm-3.5-4.2c-3.9 0-7 3.1-7 7s3.1 7 7 7 7-3.1 7-7-3.1-7-7-7zm0 12.6c-3.1 0-5.6-2.5-5.6-5.6s2.5-5.6 5.6-5.6 5.6 2.5 5.6 5.6-2.5 5.6-5.6 5.6z"
              fill="#4d5969"
            />
          </svg>
        </span>
        <span
          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
          icon="chevron-down"
        >
          <svg
            data-icon="chevron-down"
            height="14"
            viewBox="0 0 16 16"
            width="14"
          >
            <desc>
              chevron-down
            </desc>
            <path
              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Test basic Components should render RadioGroup component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="color-0"
        >
          <label
            class="bp3-label"
            for="color"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_color"
            >
              Color
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--main"
            >
              
              <div
                class=""
              >
                <label
                  class="radio StyledProps--main"
                >
                  <input
                    class="input"
                    name="color"
                    type="radio"
                    value="Red"
                  />
                  <span
                    class="radioIcon"
                  />
                  red
                </label>
                <label
                  class="radio StyledProps--main"
                >
                  <input
                    class="input"
                    name="color"
                    type="radio"
                    value="Blue"
                  />
                  <span
                    class="radioIcon"
                  />
                  blue
                </label>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render RadioGroup component in an inline form input 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group bp3-inline"
          data-id="color-0"
        >
          <label
            class="bp3-label"
            for="color"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_color"
            >
              Color
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="inlineRadioGroup StyledProps--main"
            >
              
              <div
                class=""
              >
                <label
                  class="radio StyledProps--main"
                >
                  <input
                    class="input"
                    name="color"
                    type="radio"
                    value="Red"
                  />
                  <span
                    class="radioIcon"
                  />
                  red
                </label>
                <label
                  class="radio StyledProps--main"
                >
                  <input
                    class="input"
                    name="color"
                    type="radio"
                    value="Blue"
                  />
                  <span
                    class="radioIcon"
                  />
                  blue
                </label>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render Select component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="color-0"
        >
          <label
            class="bp3-label"
            for="color"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_color"
            >
              Color
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="color"
                    placeholder="- Select -"
                    style="padding-right: 0px;"
                    type="text"
                    value=""
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render Text component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="name-0"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="acenter"
              data-tooltip-id="renderFormikFormWithoutFormName_name"
            >
              Name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render TextArea component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="name-0"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="acenter"
              data-tooltip-id="renderFormikFormWithoutFormName_name"
            >
              Name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              maxlength="1024"
              name="name"
            />
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render an inline RadioGroup component 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="color-0"
        >
          <label
            class="bp3-label"
            for="color"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_color"
            >
              Color
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="StyledProps--main"
            >
              
              <div
                class="inline"
              >
                <label
                  class="radio StyledProps--main"
                >
                  <input
                    class="input"
                    name="color"
                    type="radio"
                    value="Red"
                  />
                  <span
                    class="radioIcon"
                  />
                  red
                </label>
                <label
                  class="radio StyledProps--main"
                >
                  <input
                    class="input"
                    name="color"
                    type="radio"
                    value="Blue"
                  />
                  <span
                    class="radioIcon"
                  />
                  blue
                </label>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Test basic Components should render an inline RadioGroup component in an inline form input 1`] = `
<div>
  <div
    class="overlaySpinner"
  >
    <form
      class="main"
    >
      <div>
        <div
          class="bp3-form-group bp3-inline"
          data-id="color-0"
        >
          <label
            class="bp3-label"
            for="color"
          >
            <span
              class="acenter"
              data-tooltip-id="testform_color"
            >
              Color
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="inlineRadioGroup StyledProps--main"
            >
              
              <div
                class="inline"
              >
                <label
                  class="radio StyledProps--main"
                >
                  <input
                    class="input"
                    name="color"
                    type="radio"
                    value="Red"
                  />
                  <span
                    class="radioIcon"
                  />
                  red
                </label>
                <label
                  class="radio StyledProps--main"
                >
                  <input
                    class="input"
                    name="color"
                    type="radio"
                    value="Blue"
                  />
                  <span
                    class="radioIcon"
                  />
                  blue
                </label>
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Submit
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
